--- a/components/targets/git-clone/component.yaml
+++ b/components/targets/git-clone/component.yaml
@@ -14,5 +14,6 @@ steps:
       GIT_CLONE_REPO_URL: "{{ .parameters.repo_url }}"
       GIT_CLONE_REFERENCE: "{{ .parameters.reference }}"
       GIT_CLONE_PATH: "{{ sourceCodeWorkspace }}"
+      GIT_CLONE_TARGET_METADATA: "{{ targetMetadataWorkspace }}"
     image: components/targets/git-clone
     executable: /bin/target
