nit: make zap orchestrator run a more verbose unauthenticated scan without the rules silencing of the authenticated scan

--- a/examples/zap/overrides.yaml
+++ b/examples/zap/overrides.yaml
@@ -1,19 +1,13 @@
 zaproxy:
   - name: target
     type: string
-    value: ""
+    value: "https://opencre.org/"
   - name: scan_duration_mins
     type: string
     value: "11"
   - name: login_url
     type: string
     value: ""
-  - name: login_regexp
-    type: string
-    value: "Logout"
-  - name: logout_regexp
-    type: string
-    value: "Login"
   - name: logout_url
     type: string
     value: ""
