Updating golang example to have the correct branch in overrides for git-clone.

--- a/examples/golang/overrides.yaml
+++ b/examples/golang/overrides.yaml
@@ -2,6 +2,9 @@ git-clone:
 - name: "repo_url"
   type: "string"
   value: "https://github.com/0c34/govwa.git"
+- name: "reference"
+  type: "string"
+  value: "master"
 gosec-parser:
 - name: "repo_name"
   type: "string"
