fix SMITHY-540 add nodejs to codeql image

--- a/components/scanners/codeql/codeql-image/Dockerfile
+++ b/components/scanners/codeql/codeql-image/Dockerfile
@@ -12,5 +12,10 @@ RUN apt update &&\
     ls -lah &&\
     tar zxvf codeql-bundle-linux64.tar.gz
 
+# Install Node.js
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | bash && \
+/bin/bash -c 'source "$HOME/.nvm/nvm.sh" && nvm install node && node -v'
+
+
 ENV CODEQL_ALLOW_INSTALLATION_ANYWHERE=true
 ENTRYPOINT ["/build/codeql-runner"]
