Run all go tests on CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
         run: make install-go-test-tools
 
       - name: Run Go tests
-        run: make go-tests
+        run: make tests
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
