image target - update description

--- a/components/targets/image-get/component.yaml
+++ b/components/targets/image-get/component.yaml
@@ -1,5 +1,5 @@
 name: image-get
-description: "Downloads an image and saves it as `image.tar.gz` in the {{ sourceCodeWorkspace}} "
+description: "Downloads a container image and saves it as `image.tar.gz` in the {{ sourceCodeWorkspace}} "
 type: target
 parameters:
   - name: image
