part of smithy-619: create cache folder when creating the buf container image
if we don't create this directory and give it enough permissions the buf
process will fail if not run as root because it tries to create this
cache directory and fails.

--- a/containers/Dockerfile.buf
+++ b/containers/Dockerfile.buf
@@ -1,6 +1,8 @@
 FROM golang:alpine AS golang
 
-RUN go install github.com/bufbuild/buf/cmd/buf@v1.45.0
-RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.35.1
+RUN go install github.com/bufbuild/buf/cmd/buf@v1.45.0 && \
+    go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.35.1 && \
+    mkdir /.cache && \
+    chmod 0777 /.cache
 
 ENTRYPOINT ["/go/bin/buf"]
