--- a/components/enrichers/custom-annotation/component.yaml
+++ b/components/enrichers/custom-annotation/component.yaml
@@ -1,10 +1,14 @@
 name: "custom-annotation"
 description: "Adds a custom annotation enrichment to the passed findings"
 type: "enricher"
+parameters:
+  - name: annotations_key_vals
+    type: string
+    value: ""
 steps:
   - name: "custom-annotation"
     image: "components/enrichers/custom-annotation"
     env_vars:
       CUSTOM_ANNOTATION_NAME: "custom-annotation"
-      CUSTOM_ANNOTATION_VALUES: '{"foo":"bar"}'
+      CUSTOM_ANNOTATION_VALUES: "{{ .parameters.annotations_key_vals}}"
     executable: "/bin/app"
