--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -7,3 +7,8 @@ plugins:
     out: sdk/gen
     opt:
       - paths=source_relative
+  - remote: buf.build/protocolbuffers/python:v31.1
+    out : sdk/smithy-gen
+  - remote: buf.build/grpc/python:v1.73.1
+    out: sdk/smithy-gen
+    
