--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "grpcio (>=1.73.0,<2.0.0)",
     "grpcio-tools (>=1.73.0,<2.0.0)",
-    "python-json-logger (>=3.3.0,<4.0.0)"
+    "python-json-logger (>=3.3.0,<4.0.0)",
+    "smithy-gen @ git+https://github.com/smithy-security/smithy.git#subdirectory=sdk/smithy-gen",
 ]
 
 
