--- a/components/reporters/pdf/Dockerfile
+++ b/components/reporters/pdf/Dockerfile
@@ -1,10 +1,11 @@
 FROM golang:1.23.4 AS builder
 COPY . /workdir
 WORKDIR /workdir
+
 # Install Playwright CLI with the correct version
 RUN go install github.com/playwright-community/playwright-go/cmd/playwright@v0.4901.0
 # Build your Go application
-RUN GOOS=linux GOARCH=amd64 go build -o /bin/reporter cmd/main.go
+RUN go build -o /bin/reporter cmd/main.go
 
 # Stage 3: Final image
 FROM ubuntu:22.04
@@ -16,5 +17,7 @@ RUN apt-get update
 RUN apt-get install -y ca-certificates tzdata
 RUN ./go/bin/playwright install chromium --with-deps
 RUN rm -rf /var/lib/apt/lists/*
+
+WORKDIR /workspace
 
 CMD ["/reporter"]
