Slack works like Discord with threads and details

--- a/components/reporters/slack/component.yaml
+++ b/components/reporters/slack/component.yaml
@@ -5,9 +5,21 @@ parameters:
   - name: "slack_webhook"
     type: "string"
     value: ""
+  - name: "slack_token"
+    type: "string"
+    value: ""
+  - name: "slack_channel"
+    type: "string"
+    value: ""
+  - name: "debug"
+    type: "string"
+    value: "false"
 steps:
   - name: "slack"
     image: "components/reporters/slack"
     executable: "/bin/app"
     env_vars:
       SLACK_WEBHOOK: "{{ .parameters.slack_webhook }}"
+      SLACK_TOKEN: "{{ .parameters.slack_token }}"
+      SLACK_CHANNEL: "{{ .parameters.slack_channel }}"
+      SLACK_DEBUG: "{{ .parameters.debug }}"
