--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -37,7 +37,7 @@ jobs:
         run: make install-go-test-tools
 
       - name: Run Go tests
-        run: make tests
+        run: make -j 8 tests
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
