--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+          cache-dependency-path: "**/*.sum"
 
       - name: Install Go Test Tools
         run: make install-go-test-tools
