--- a/.github/workflows/package-component.yaml
+++ b/.github/workflows/package-component.yaml
@@ -53,6 +53,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: smithyctl/go.mod
+          cache-dependency-path: "**/*.sum"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
