--- a/components/scanners/credo/scanner/Dockerfile
+++ b/components/scanners/credo/scanner/Dockerfile
@@ -1,8 +1,9 @@
 FROM elixir:otp-28
 
 COPY entrypoint.sh /entrypoint.sh
+
 # Install Credo
-RUN echo Y |mix escript.install hex credo  && \
+RUN echo Y |mix escript.install hex credo 1.7.12  && \
     chmod +x /entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
