pin nancy integration

--- a/components/scanners/nancy/scanner/Dockerfile
+++ b/components/scanners/nancy/scanner/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/sonatypecommunity/nancy:latest AS nancy
+FROM docker.io/sonatypecommunity/nancy:v1.0 AS nancy
 
 FROM golang:1.23.4
 
