--- a/components/scanners/trivy/scanner/Dockerfile
+++ b/components/scanners/trivy/scanner/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/aquasec/trivy:latest
+FROM docker.io/aquasec/trivy:0.65.0
 
 COPY ./entrypoint.sh /entrypoint.sh
 ENTRYPOINT [ "/bin/bash", "-c", "/bin/entrypoint.sh" ]
