--- a/examples/source-code-artifact/overrides.yaml
+++ b/examples/source-code-artifact/overrides.yaml
@@ -1,4 +1,4 @@
 source-code-artifact:
 - name: "artifact_url"
   type: "string"
-  value: "https://github.com/0c34/govwa/archive/refs/heads/master.zip"
+  value: "https://github.com/B3nac/InjuredAndroid/releases/download/v1.0.12/InjuredAndroid-1.0.12-release.apk"
