--- a/components/scanners/zaproxy/component.yaml
+++ b/components/scanners/zaproxy/component.yaml
@@ -17,6 +17,9 @@ parameters:
   - name: scan_duration_mins
     type: string
     value: "10"
+  - name: spider_duration_mins
+    type: string
+    value: "5"
   - name: api_key
     type: string
     value: "changeme"
@@ -24,6 +27,9 @@ parameters:
     type: string
     value: "10"
   - name: startup_check_interval
+    type: string
+    value: "10"
+  - name: shutdown_timeout
     type: string
     value: "10"
 steps:
@@ -37,7 +43,6 @@ steps:
     executable: /workdir/venv/bin/python3
     args:
     - /workdir/zap-authenticated-scan.py
-    - --use-automation-framework
     env_vars:
       API_KEY: "{{ .parameters.api_key }}"
       LOGIN_URL: "{{ .parameters.login_url }}"
@@ -47,8 +52,10 @@ steps:
       REPORT_DIR: "{{ scratchWorkspace }}"
       REPORT_FILENAME: "zap-report.json"
       SCAN_DURATION_MINS: "{{ .parameters.scan_duration_mins }}"
+      SPIDER_DURATION_MINS: "{{ .parameters.spider_duration_mins }}"
       STARTUP_CHECK_RETRIES: "{{ .parameters.startup_check_retries }}"
       STARTUP_CHECK_INTERVAL: "{{ .parameters.startup_check_interval }}"
+      SHUTDOWN_TIMEOUT: "{{ .parameters.shutdown_timeout }}"
   - name: parser
     image: components/scanners/zaproxy
     executable: /bin/app
