zaproxy: refactor for simplicity, speed and testability
This commit refactors zap as follows:
* adds java resource limits to launching zap
* adds user controlled spider depth and max children settings
* removes the two automation framework scripts in favour of a single one
  that is composable and gets the logged in user config only when needed
* adds tests for automation framework script correctness
* expands the readme with documentation
* adds makefile targets for setting up and launching the tests

--- a/components/scanners/zaproxy/zap_authenticated_scan/Makefile
+++ b/components/scanners/zaproxy/zap_authenticated_scan/Makefile
@@ -11,3 +11,13 @@ image:
 				 --label "$(BUILD_LABELS)" \
 				 --tag $(COMPONENT_REGISTRY)/$(COMPONENT_REPOSITORY):$(COMPONENT_TAG) \
 				 --file Dockerfile .
+
+fmt:
+	. .venv/bin/activate && black .
+
+venv:
+	python3 -m venv .venv
+	. .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt
+
+tests:
+	. ./.venv/bin/activate && pytest .
