--- a/components/scanners/zaproxy/component.yaml
+++ b/components/scanners/zaproxy/component.yaml
@@ -2,6 +2,8 @@ name: zaproxy
 description: "Runs zaproxy then parses findings into the OCSF format"
 type: scanner
 parameters:
+
+  # auth scan variables
   - name: login_url
     type: string
     value: ""
@@ -11,15 +13,26 @@ parameters:
   - name: password
     type: string
     value: ""
+
   - name: target
     type: string
     value: ""
+
+  # performance parameters
   - name: scan_duration_mins
     type: string
     value: "10"
   - name: spider_duration_mins
     type: string
     value: "5"
+  - name: spider_max_crawl_depth
+    type: string
+    value: "5"
+  - name: spider_max_children
+    type: string
+    value: "50"
+    
+  # internal params mostly used for dev
   - name: api_key
     type: string
     value: "changeme"
@@ -39,20 +52,27 @@ steps:
     env_vars:
       TARGET: "{{ .parameters.target }}"
   - name: run-authenticated-zap-scan
-    image: components/scanners/zaproxy/zap-authenticated-scan
+    image: components/scanners/zaproxy/zap_authenticated_scan
     executable: /workdir/venv/bin/python3
     args:
-    - /workdir/zap-authenticated-scan.py
+    - /workdir/zap_authenticated_scan.py
     env_vars:
-      API_KEY: "{{ .parameters.api_key }}"
+      TARGET: "{{ .parameters.target }}"
+      # auth
       LOGIN_URL: "{{ .parameters.login_url }}"
       USERNAME: "{{ .parameters.username }}"
       PASSWORD: "{{ .parameters.password }}"
-      TARGET: "{{ .parameters.target }}"
-      REPORT_DIR: "{{ scratchWorkspace }}"
-      REPORT_FILENAME: "zap-report.json"
+
+      # performance -- these overwhelm clusters
       SCAN_DURATION_MINS: "{{ .parameters.scan_duration_mins }}"
       SPIDER_DURATION_MINS: "{{ .parameters.spider_duration_mins }}"
+      SPIDER_MAX_CRAWL_DEPTH: "{{ .parameters.spider_max_crawl_depth}}"
+      SPIDER_MAX_CHILDREN: "{{ .parameters.spider_max_children}}"
+
+      # smithy internal
+      API_KEY: "{{ .parameters.api_key }}"
+      REPORT_DIR: "{{ scratchWorkspace }}"
+      REPORT_FILENAME: "zap-report.json"
       STARTUP_CHECK_RETRIES: "{{ .parameters.startup_check_retries }}"
       STARTUP_CHECK_INTERVAL: "{{ .parameters.startup_check_interval }}"
       SHUTDOWN_TIMEOUT: "{{ .parameters.shutdown_timeout }}"
