fixed SAAS-7675: allow unarchived files to be fetched
This commit allows the source code artefact fetcher to become more
interlligent about managing both archived and unarchived files. If the
user provides an archived file, the system will check the extension of
the file name, if one exists in order to determine the appropriate
extraction algorithm. If no extension exists, the user can provide one
through an environment variable. If a file extension exists but it's not
supported, the file, or no extension exists and no environment variable
is provided, the file is considered unarchived and is downloaded to the
specified path.

--- a/components/targets/source-code-artifact/component.yaml
+++ b/components/targets/source-code-artifact/component.yaml
@@ -26,7 +26,7 @@ parameters:
 steps:
   - name: "download-and-unpack"
     env_vars:
-      ARCHIVE_PATH: "{{ scratchWorkspace }}/archive"
+      ARCHIVE_PATH: "{{ scratchWorkspace }}"
       SOURCE_CODE_PATH: "{{ sourceCodeWorkspace }}"
       METADATA_PATH: "{{ targetMetadataWorkspace }}/target.json"
       ARTIFACT_URL: "{{ .parameters.artifact_url }}"
