Add initial structure for tests

--- a/components/scanners/credo/component.yaml
+++ b/components/scanners/credo/component.yaml
@@ -12,4 +12,5 @@ steps:
     image: components/scanners/credo
     env_vars:
       CREDO_RAW_OUT_FILE_PATH: "{{ scratchWorkspace }}/credo.out.sarif.json"
+      WORKSPACE_PATH: "{{ sourceCodeWorkspace }}"
     executable: /bin/app
