Fix Dockerfile and add credo.sarif.json

--- a/components/scanners/credo/scanner/Dockerfile
+++ b/components/scanners/credo/scanner/Dockerfile
@@ -1,9 +1,8 @@
 FROM elixir:otp-28
 
 COPY entrypoint.sh /entrypoint.sh
-
-# Install a specific version of the Credo escript (e.g., 1.7.12)
-RUN mix escript.install hex credo@1.7.12 --force && \
+# Install Credo
+RUN echo Y |mix escript.install hex credo 1.7.12  && \
     chmod +x /entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
