--- a/components/scanners/sobelow/scanner/Dockerfile
+++ b/components/scanners/sobelow/scanner/Dockerfile
@@ -2,7 +2,7 @@ FROM elixir:otp-28
 
 COPY entrypoint.sh /entrypoint.sh
 # Install Sobelow
-RUN echo Y |mix escript.install github sobelow/sobelow  && \
+RUN mix escript.install github sobelow/sobelow tag v0.14.0 --force && \
     chmod +x /entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
