Use force instead of echo Y |

--- a/components/scanners/credo/scanner/Dockerfile
+++ b/components/scanners/credo/scanner/Dockerfile
@@ -2,7 +2,7 @@ FROM elixir:otp-28
 
 COPY entrypoint.sh /entrypoint.sh
 # Install Credo
-RUN echo Y |mix escript.install hex credo 1.7.12  && \
+RUN mix escript.install hex credo 1.7.12 --force && \
     chmod +x /entrypoint.sh
 
 ENTRYPOINT [ "/entrypoint.sh" ]
