Allow sobelow to find elixr projects that are not at the root dir

--- a/components/scanners/sobelow/scanner/Dockerfile
+++ b/components/scanners/sobelow/scanner/Dockerfile
@@ -1,5 +1,8 @@
 FROM elixir:otp-28
 
+# Install jq
+RUN apt-get update && apt-get install -y jq
+
 COPY entrypoint.sh /entrypoint.sh
 # Install Sobelow
 RUN mix escript.install github sobelow/sobelow tag v0.14.0 --force && \
